# obs-studio

./: .travis.yml
CI/: before-deploy-osx.sh  install-dependencies-linux.sh  install-dependencies-osx.sh
UI/: CMakeLists.txt  locked-checkbox.cpp  visibility-checkbox.cpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp  window-basic-settings.hpp
UI/data/themes/: Acri.qss  Dark.qss  Default.qss  Rachni.qss
UI/forms/: OBSBasic.ui  OBSBasicAddSource.ui  OBSBasicSettings.ui  obs.qrc
UI/frontend-plugins/decklink-output-ui/: CMakeLists.txt  DecklinkOutputUI.cpp  DecklinkOutputUI.h  decklink-ui-main.cpp  decklink-ui-main.h
UI/obs-frontend-api/: obs-frontend-api.h
UI/settings/: settings.qml
cmake/Modules/: CopyMSVCBins.cmake
libobs/: obs-output.c  obs-output.h  obs-scene.c  obs-source.c  obs-source.h  obs.h
obs/: CMakeLists.txt  window-basic-add-source.cpp  window-basic-add-source.hpp  window-basic-main.cpp  window-basic-preview.cpp
obs/forms/: OBSBasicAddSource.ui
plugins/: CMakeLists.txt
plugins/decklink/: DecklinkBase.cpp  DecklinkBase.h  DecklinkFilter.cpp  DecklinkFilter.hpp  DecklinkInput.cpp  DecklinkInput.hpp  DecklinkOutput.cpp  DecklinkOutput.hpp  DecklinkOutputUI.cpp  DecklinkOutputUI.h  const.h  decklink-device-instance.cpp  decklink-device-instance.hpp  decklink-device-mode.hpp  decklink-device.cpp  decklink-device.hpp  decklink-devices.cpp  decklink-devices.hpp  decklink-filter.cpp  decklink-output.cpp  decklink-output.hpp  decklink-source.cpp  decklink-source.hpp  decklink.cpp  plugin-main.cpp
plugins/decklink/data/locale/: en-US.ini
plugins/decklink/forms/: output.ui
plugins/decklink/linux/: CMakeLists.txt
plugins/decklink/mac/: CMakeLists.txt
plugins/decklink/win/: CMakeLists.txt
plugins/mac-syphon/: syphon.m
plugins/win-capture/get-graphics-offsets/: d3d9-offsets.cpp
